# SkySentinel-X

./: README.md  pyproject.toml
notebooks/: sentinel_copy.txt
utils/: logger_test.py  serve_logger.py  train_logger.py
