[project]
name = "sentinel"
version = "0.1.0"
description = "This package is for skysentinel-x, a drone vs bird classification system, that is a deep learning project and uses CNNs."
authors = [
    {name = "AdityaSinghDevs",email = "adityasingh.devs@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
